<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/idMainText"
        android:layout_width="216dp"
        android:layout_height="37dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="60dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="@string/test"
        android:minHeight="48dp"
        android:text="@string/main_text"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="176dp"
        android:layout_height="158dp"
        android:layout_marginTop="148dp"
        android:contentDescription="@string/main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idMainText"
        app:srcCompat="@drawable/marvin_the_paranoid_android"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/idEnterButton"
        android:layout_width="147dp"
        android:layout_height="75dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="172dp"
        android:background="@drawable/rounder_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>