<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registerscreen"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/idRegTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/teal_200"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="20"
        android:text="@string/register_screen"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/idImageReg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="153dp"
        android:contentDescription="@string/imageregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idRegTitle"
        app:srcCompat="@drawable/compose"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/idUserReg"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="92dp"
        android:autofillHints=""
        android:background="@drawable/button_rounded"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_user_name"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#030303"
        android:textColorHint="#5B3804"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idImageReg" />

    <EditText
        android:id="@+id/idPasswordReg"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/button_rounded"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#030303"
        android:textColorHint="#5B3804"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUserReg" />

    <EditText
        android:id="@+id/idConfirmPassw"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:background="@drawable/button_rounded"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#030303"
        android:textColorHint="#5B3804"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPasswordReg" />

    <Button
        android:id="@+id/idSubmitReg"
        android:layout_width="149dp"
        android:layout_height="60dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/rounder_button"
        android:text="@string/submit"
        android:textColor="#030303"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idConfirmPassw" />

    <Button
        android:id="@+id/idDeleteReg"
        android:layout_width="149dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/rounder_button"
        android:text="@string/delete"
        android:textColor="#795548"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/idSubmitReg"
        app:layout_constraintTop_toBottomOf="@+id/idConfirmPassw"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>