<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginscreen"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/idAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/teal_200"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="20"
        android:text="@string/reminder_pal"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/idLoginTitle"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idAppTitle"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/idUserName"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="156dp"
        android:autofillHints=""
        android:background="@drawable/button_rounded"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/enter_user_name"
        android:inputType="textPersonName"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#5B3804"
        android:textColorHint="#5B5959"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idLoginTitle"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/idPassword"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/button_rounded"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#5B3804"
        android:textColorHint="#5B5959"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idUserName"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/idLoginButton"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounder_button"
        android:text="@string/login"
        android:textColor="#5B3804"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPassword"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/idLoginReg"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/rounder_button"
        android:shape="oval"
        android:text="@string/register"
        android:textColor="#5B3804"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>